--- a/src/app/vehicles/vehicale-detail/vehicale-detail.component.html
+++ b/src/app/vehicles/vehicale-detail/vehicale-detail.component.html
@@ -20,7 +20,7 @@
           <div class="ml-3">
             <button
               class="btn btn-primary"
-              (click)="addToCart(selectedVehicle()?.id!)"
+              (click)="addToCart(selectedVehicle())"
             >
               Add to Cart
             </button>
