--- a/src/app/cart/cart-item/cart-item.component.html
+++ b/src/app/cart/cart-item/cart-item.component.html
@@ -1,27 +1,29 @@
-<!-- <li class="list-group-item d-flex justify-content-between align-items-center">
+<li class="list-group-item d-flex justify-content-between align-items-center">
   <div class="d-flex align-items-center">
     <img
-      [src]="'assets/images/' + cartItem.vehicle.images[0]"
-      alt="{{ cartItem.vehicle.brand }} {{ cartItem.vehicle.model }}"
+      [src]="'assets/images/' + (cartItem?.vehicle?.images??[])[0]"
+      alt="{{ cartItem?.vehicle?.brand }} {{ cartItem?.vehicle?.model }}"
       style="height: 60px; width: auto; border-radius: 5px; margin-right: 10px;"
     />
     <div>
-      <strong>{{ cartItem.vehicle.brand }} {{ cartItem.vehicle.model }}</strong><br />
+      <strong>{{ cartItem?.vehicle?.brand }} {{ cartItem?.vehicle?.model }}</strong><br />
       <small>
-        <strong>Price:</strong> {{ cartItem.vehicle.price | currency:'LKR':'symbol-narrow' }}<br />
-        <strong>Condition:</strong> {{ cartItem.vehicle.condition }}
+        <strong>Price:</strong> {{ cartItem?.vehicle?.price | currency:'LKR':'symbol-narrow' }}<br />
+        <strong>Condition:</strong> {{ cartItem?.vehicle?.condition }}
       </small>
     </div>
   </div>
   <div>
+    Quantity :
     <input
       type="number"
       class="form-control"
       style="width: 70px; display: inline-block;"
-      [(ngModel)]="cartItem.quantity"
-      (change)="onQuantityChange()"
+      [(ngModel)]="cartItem!.quantity"
+      (change)="onQuantityChange(cartItem!)"
       min="1"
     />
-    <button class="btn btn-danger btn-sm ml-2" (click)="removeItem()">Remove</button>
+    &nbsp;
+    <button class="btn btn-danger btn-sm ml-2" (click)="removeItem(cartItem!)">Delete</button>
   </div>
-</li> -->
+</li>
