--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Vehicale Sell</a>
+    <a class="navbar-brand" href="#">Vehicle Sell</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -18,21 +18,17 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about">Vehicale List</a>
+          <a class="nav-link" routerLink="/vehicles">Vehicle List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact">Cart</a>
+          <a class="nav-link position-relative" routerLink="/cart">
+            Cart
+            <span class="cart-number">
+              {{ cartCount }}
+            </span>
+          </a>
         </li>
       </ul>
-      <!-- <form class="d-flex">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form> -->
     </div>
   </div>
 </nav>
