--- a/src/app/vehicles/vehicale-shell/vehicale-shell.component.html
+++ b/src/app/vehicles/vehicale-shell/vehicale-shell.component.html
@@ -1,15 +1,8 @@
 <div class='row'>
 <div class="col-md-4">
   <br>
-  <div class="container row">
-    <div class="col-sm-2">
-      Filter By :
-    </div>
-    <div class="col-sm-2">
-      <input type="text" [(ngModel)]="filtertext"/>
-    </div>
-  </div>
-  <app-vehicale-list [listCriteria] ="filtertext"></app-vehicale-list>
+  <app-vehicles-filter [(filterCriteria)]="filtertext"  ></app-vehicles-filter>
+  <app-vehicale-list [listCriteria] ="filtertext()"></app-vehicale-list>
 </div>
 <div class="col-md-8">
   <app-vehicale-detail></app-vehicale-detail>
