--- a/src/app/vehicles/vehicles-filter/vehicles-filter.component.html
+++ b/src/app/vehicles/vehicles-filter/vehicles-filter.component.html
@@ -3,6 +3,7 @@
     Filter By :
   </div>
   <div class="col-sm-2">
-    <input type="text" [(ngModel)]="filtertext"/>
+    <input type="text" [(ngModel)]="filter"/>
   </div>
+
 </div>
