--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Vehicle Sell</a>
+    <a class="navbar-brand"
+    routerLink="/vehicles">Vehicle Sell</a>
     <button
       class="navbar-toggler"
       type="button"
