--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,9 @@
           <a class="nav-link" routerLink="/vehicles">Vehicle List</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/sample">Sample</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link position-relative" routerLink="/cart">
             Cart
             <span class="cart-number">
