--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,6 +25,9 @@
           <a class="nav-link" routerLink="/sample">Sample</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/sample2">To Do Sample</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link position-relative" routerLink="/cart">
             Cart
             <span class="cart-number">
